Assignment2_Zhao_Duo/tests/automated/tests/bad/BasicNumbersWithBadChars-26.calc
2.3% d 34.%5 e 6.7%8 f 99.%99
